CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)

# Find SWIG
FIND_PACKAGE(SWIG REQUIRED)
IF(NOT SWIG_FOUND)
   MESSAGE(SEND_ERROR "SWIG Libraries not found.")
ENDIF(NOT SWIG_FOUND)

# Include SWIG
INCLUDE(${SWIG_USE_FILE})


FIND_PACKAGE(PythonLibs REQUIRED)
IF(NOT PYTHONLIBS_FOUND)
   MESSAGE(SEND_ERROR "Python Libraries not found.")
ENDIF(NOT PYTHONLIBS_FOUND)

# Find ossim
FIND_PACKAGE(ossim REQUIRED)
IF(NOT OSSIM_FOUND)
   MESSAGE(SEND_ERROR "OSSIM Libraries not found.")
ENDIF(NOT OSSIM_FOUND)

# Include Python
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${OSSIM_INCLUDES})

SET(CMAKE_SWIG_FLAGS "-c++")

SET(MODULE_NAME pyossim)

#SET(PYOSSIM_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/python)
SET(PYAPPS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/apps)

SET(SOFILE ${CMAKE_BINARY_DIR}/swig/ossim/_${MODULE_NAME}.so)
SET(PYFILE ${CMAKE_BINARY_DIR}/swig/ossim/${MODULE_NAME}.py)
SET(PYOSSIM_DIR /usr/local/ossim/python)
SET(PYOSSIM_LIB_DIR ${PYOSSIM_DIR}/lib/)
SET(PYAPPS_DIR ${PYOSSIM_DIR}/apps/)


SUBDIRS(swig)

MESSAGE("Using OSSIM headers installed at ${OSSIM_INCLUDES}")
MESSAGE("Using OSSIM libraries installed at ${OSSIM_LIBRARIES}")
MESSAGE("PYOSSIM_DIR=${PYOSSIM_DIR}")
MESSAGE("PyOSSIM libraries be installed at ${PYOSSIM_LIB_DIR}")
MESSAGE("PyOSSIM apps will be installed at ${PYAPPS_DIR}")

INSTALL(FILES ${SOFILE} ${PYFILE} DESTINATION ${PYOSSIM_LIB_DIR})
FILE(GLOB apps "${PYAPPS_SOURCE_DIR}/*.py")
INSTALL(FILES ${apps} DESTINATION ${PYAPPS_DIR})



